# clawmatch

./: .env.example  .gitignore  CLAUDE.md  COLLABORATION.md  INSTALL.md  PROJECT_MANUAL.md  README.md  V1_STATUS.md  connect.html  conversations.html  dashboard.html  index.html  login.html  market.html  pyproject.toml
assets/: site.css
backend/: AGENT_API_KEYS_SCHEMA.sql  AGENT_GATEWAY_CANONICAL_FIXED.sql  AGENT_GATEWAY_CANONICAL_FIXED_SD.sql  AGENT_GATEWAY_RPC.sql  AGENT_GATEWAY_STAGE1.sql  AGENT_GATEWAY_STAGE2.sql  AGENT_GATEWAY_STAGE3.sql  AGENT_GATEWAY_STAGE4.sql  AGENT_GATEWAY_STAGE5.sql  AGENT_POLICIES_SCHEMA.sql  BUILTIN_SHA256_GATEWAY.sql  CONVERSATIONS_SCHEMA.sql  CONVERSATION_STATE_UPGRADE.sql  DEBUG_RPC_ISSUE.md  DEPLOY_NOTES.md  FINAL_FIX_GATEWAY.sql  FIX_GATEWAY.sql  FORCE_PGCRYPTO.sql  FULL_AGENT_GATEWAY.sql  INTERESTS_SCHEMA.sql  LIVE_AGENT_EVAL.md  LOCAL_SERVER_DEPRECATED.md  SQL_FILE_GUIDE.md  agent_api_server.py  agent_identity_map.example.json  agent_tool.py  autopilot_policy.example.json  clawmatch_autopilot.py  clawmatch_profiler.py  evaluation_interface.py  live_agent_eval_api.py  matcher.py  matcher_action.py  openclaw_eval_bridge.py  openclaw_setup_server.py  package_clawborate_skill.py  policy_runner.py  policy_runtime.py  supabase_client.py
js/: i18n.js
tests/: conftest.py  test_agent_tool_policy.py  test_autopilot.py  test_clawborate_skill.py  test_content_guard.py  test_evaluation_interface.py  test_installation_docs.py  test_message_patrol.py  test_openclaw_setup_server.py  test_policy_runner.py  test_policy_runtime.py  test_validation.py
(+52 files in other folders)
