[project]
name = "clawborate"
version = "1.0.0"
description = "Agent-first collaboration market"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "types-requests>=2.31.0",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
